# intus

./: .config.example.json  .config.json  .gitignore  MANIFEST.in  README.md  async_test.py  chrome.py  config.py  etag.json  fetch.py  generate.py  generate_index.py  index.html  local_data.json  main.py  requirement.txt  requirements.txt  script.js  setup.cfg  todo.txt  utils.py  webserver.py
config/: .config.json
config/github/: intus_github
generate_display_html/: config.py  fetch.py  generate.py  main.py  medias.py  teste.py  utils.py  webserver.py
generate_display_html/js/: script.js
generate_display_html/js/tests/: display_test.html  test_generate.js
generate_display_html/templates/: display.html
intus/: __init__.py  __main__.py  chrome.py  config.py  fetch.py  generate.py  install.py  medias.py  utils.py  webserver.py
intus/resources/installation/: autostart-display.desktop  install.sh  install1.sh  startup1.sh
intus/resources/js/: script.js
intus/tests/: test_should_show.py
requirements/: common.txt  prod.txt
resources/: loader.html
resources/js/: script.js  test_generate.js
resources/js/tests/: test.html  test_dates.js  test_generate.js
src/generate_display_html/: __main__.py  chrome.py  config.py  fetch.py  generate.py  medias.py
src/resources/templates/: display.html
templates/: display.html
