[metadata]
name = intus
version = 1.0.2
author = Mateus Ribeiro Bossa
author_email = mateus.rbossa@gmail.com
description = Generates the html file to display posts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mtbossa/generate_display_html
license = MIT License

[options]
packages = intus
python_requires = >=3.6
include_package_data = True
install_requires =
    requests
    Jinja2

[options.entry_points]
console_scripts =
    generate_display_html = generate_display_html.__main__:main